feat(renderer): renderAndroidResources task + vector drawable rendering
Wires the resource-render half of the pipeline. ResourcePreviewRenderTest
runs under the same Robolectric harness as RobolectricRenderTest (SDK 35,
NATIVE graphics, paused looper, hardware pixel-copy), reads the
resources.json written by discoverAndroidResources, resolves each
ResourceType.VECTOR capture via context.resources.getIdentifier, draws
the drawable to a bitmap-backed canvas at intrinsic size, and writes
PNG to build/compose-previews/renders/resources/.

Qualifier-driven AAPT resolution works via RuntimeEnvironment
.setQualifiers(capture.variant.qualifiers) — verified end-to-end on
samples/android: the night-xhdpi capture for ic_compose_logo correctly
picks up drawable-night/ic_compose_logo.xml (dark green) rather than
the default drawable/ic_compose_logo.xml (bright green). Density
scaling is automatic (48dp vector at xhdpi → 96×96 PNG; 108dp launcher
backgrounds → 216×216).

ANIMATED_VECTOR and ADAPTIVE_ICON captures are skipped for now with a
single log line — they land in commits 3b (adaptive shape masks +
LEGACY fallback) and 4 (animated-vector GIF encoding).

Wiring lives in AndroidPreviewSupport.registerAndroidTasks alongside
the existing renderPreviews registration, gated on
composePreview.resourcePreviews.enabled. The new task reuses the
renderer/test classpath and JVM args computed for renderPreviews;
duplication is intentional for now, can factor out a shared helper
once the resource-task surface stabilises.

End-to-end on :samples:android:renderAndroidResources writes the
expected 6 vector PNGs and skips the 2 adaptive icons.